Fix: breadcrumb structure (nav>ol pattern), FAQ sticky label align-self:start

--- a/css/style.css
+++ b/css/style.css
@@ -3388,6 +3388,7 @@ html.is-animating body {
   top:120px;
   height:fit-content;
   white-space:nowrap;
+  align-self:start;
 }
 
 /* Accordion items */
